--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,14 +51,15 @@ nav {
   border-bottom: 1px solid #888888;
   color: #555555;
   width: 100%;
-  padding-top: 3%;
+  padding-top: 2%;
   padding-bottom: 2%;
+  list-style-type: none;
 }
 
 .bus-data-line1 {
   display: inline-block;
-  margin-bottom: 1%;
-  width: 100%
+  /*margin-bottom: -3%;*/
+  width: 100%;
 }
 
 .bus-data-line2 {
@@ -132,7 +133,7 @@ h6 {
   font-weight: 100;
 }
 
-.button {
+.warning-button {
   background-color: #C49C3F;
   border: none;
   color: white;
@@ -141,11 +142,128 @@ h6 {
   display: inline-block;
   margin: 4px 2px;
   cursor: default;
-  border-radius: 18px;
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
+  border-radius: 30px;
+  width: 80%;
+  height: 8%;
+  margin-left: 10%;
+  margin-right: 20%;
   margin-top: 4%;
   margin-bottom: 4%;
+  font-size: .9em;
+  font-weight: 600;
+  padding: 5% 5%;
+}
+
+.save-button {
+  background-color: #C47566;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  display: inline-block;
+  cursor: default;
+  border-radius: 30px;
+  width: 80%;
+  height: 8%;
+  margin-left: 10%;
+  margin-right: 20%;
+  margin-top: 8%;
+  margin-bottom: 4%;
+  font-size: 1em;
+  font-weight: 600;
+  padding: 5% 5%;
+}
+
+.nav-button {
+  background-color: #5C7EC4;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: default;
+  border-radius: 30px;
+  width: 80%;
+  height: 8%;
+  margin-left: 10%;
+  margin-right: 20%;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  font-size: 1em;
+  font-weight: 600;
+  padding: 5% 5%;
+}
+
+.go-button {
+  background-color: #C49C3F;
+  border: 3px solid white;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: default;
+  border-radius: 30px;
+  width: 40%;
+  height: 8%;
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-top: 5%;
+  margin-bottom: 4%;
+  font-size: .9em;
+  font-weight: 600;
+  padding: 4% 4%;
+}
+
+.map-info {
+background-image: url(../images/BusStopDisplay.png);
+height: 20%;
+background-size: cover;
+background-position: center;
+margin-top: 10%;
+}
+
+.stop-info {
+  color: #555555;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  margin-top: 10%;
+  text-align: center;
   font-size: .7em;
+  font-weight: 600;
+  line-height: 2.5em;
+}
+
+.landing {
+  background-color: #53B3C4;
+}
+
+form {
+  color: white;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 15%;
+  line-height: 1em;
+}
+
+input {
+  width: 100%;
+  height: 3em;
+  font-family: "SF Pro Text";
+  font-size: .7em;
+}
+
+.text {
+  text-align: center;
+  color: #555555;
+  font-weight: bolder;
+  margin-top: 10%;
+}
+
+main.landing {
+  margin-top: 35%;
 }
