--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
 body {
   font-size: 20px;
   background-color: #FFFFFF;
-  font-family: "SF Pro Text";
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 nav {
